added test cases and minor fix
